# quri-parts

./: .exclude  .flake8  .gitignore  .licensed.yml  .poetry.lock.swp  245.patch  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  Pillow-9.5.0-cp311-cp311-macosx_10_10_x86_64.whl  README.md  conftest.py  mypy.ini  pyproject.toml  requirements-local.txt  requirements.txt
notebooks/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/quri_sdk_notebooks/examples/0_quri-algo-vm/0_qsci/: 0_qsci.ipynb
notebooks/quri_sdk_notebooks/examples/0_quri-algo-vm/1_spe/: 1_spe.ipynb
notebooks/quri_sdk_notebooks/examples/0_quri-algo-vm/3_scalar_field_theory/: 3_scalar_field_theory.ipynb
notebooks/quri_sdk_notebooks/examples/0_quri-algo-vm/4_surface_code/: 4_surface_code.ipynb
notebooks/quri_sdk_notebooks/examples/0_quri-algo-vm/5_page_curve/: 5_page_curve.ipynb
notebooks/quri_sdk_notebooks/examples/0_quri-algo-vm/6_transverse_field_ising_model/: 6_TFIM.ipynb
notebooks/quri_sdk_notebooks/examples/1_quri-parts/1_Intermediate/0_DJ/: 0._dj_algorithm.ipynb
notebooks/quri_sdk_notebooks/examples/1_quri-parts/2_QFT_and_QPE/0_QFT/: 0_qft.ipynb
notebooks/quri_sdk_notebooks/tutorials/1_quri-algo/0_basics/1_estimator/: 1_estimator.ipynb
notebooks/quri_sdk_notebooks/tutorials/2_quri-vm/0_vm-introduction/: 0_vm-introduction.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/0_circuits/: 0_circuits.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/10_error_mitigation/: noise.numbers
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/10_error_mitigation/1_zne/: 1_zne.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/10_error_mitigation/2_cdr/: 2_cdr.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/11_data_recording/: 11_data_recording.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/2_states/: 2_states.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/4_estimators/: 4_estimators.ipynb  estimator_table.numbers
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/5_mapping/: qubit_operator_mapping.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/6_sampling_estimation/: sampling_estimation.ipynb  sampling_estimator_tables.numbers
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/7_real_devices/0_sampling_backends/: sampling_real.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/0_basics/9_noise_error/: 9_noise_error.ipynb  noise.numbers
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/1_advanced/0_simulator/: 0_simulator.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/1_advanced/2_variational/: variational.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/2_quantum-chemistry/0_introduction/: 0_introduction.ipynb
notebooks/quri_sdk_notebooks/tutorials/3_quri-parts/2_quantum-chemistry/1_mo/: 1_molecules.ipynb
quri-algo/: pyproject.toml  requirements.txt
quri-algo/.github/: dependabot.yml  pull_request_template.md
quri-algo/.github/ISSUE_TEMPLATE/: small_enhancement.md  user_story.md
quri-algo/.github/workflows/: lint.yml  package.yml  test.yml  typecheck.yml
quri-algo/quri_algo/algo/: __init__.py  interface.py
quri-algo/quri_algo/algo/compiler/: __init__.py  base_classes.py  qaqc.py
quri-algo/quri_algo/algo/phase_estimation/: interface.py
quri-algo/quri_algo/algo/phase_estimation/spe/: __init__.py  interface.py  lt22.py
quri-algo/quri_algo/algo/phase_estimation/spe/gaussian/: __init__.py  fitting.py  param_choice.py
quri-algo/quri_algo/algo/phase_estimation/spe/utils/: recorder.py
quri-algo/quri_algo/algo/phase_estimation/spe/utils/fourier/: __init__.py  coefficient.py  (+2 more)
quri-algo/quri_algo/algo/utils/: timer.py
quri-algo/quri_algo/circuit/: hadamard_test.py
quri-algo/quri_algo/circuit/time_evolution/: __init__.py  trotter_time_evo.py
quri-algo/quri_algo/circuit/utils/: transpile.py
quri-algo/quri_algo/core/: __init__.py
quri-algo/quri_algo/core/cost_functions/: __init__.py  base_classes.py  hilbert_schmidt_test.py  utils.py
quri-algo/quri_algo/core/estimator/: __init__.py  hadamard_test.py  interface.py
quri-algo/quri_algo/core/estimator/time_evolution/: __init__.py  exact_spectrum.py  interface.py
quri-algo/quri_algo/problem/: interface.py
quri-algo/quri_algo/problem/models/: cond_mat.py
quri-algo/quri_algo/problem/operators/: hamiltonian.py
quri-algo/quri_algo/qsub/time_evolution/: interface.py
quri-algo/tests/algo/compiler/: test_qaqc.py
quri-algo/tests/algo/phase_estimation/qpe/: test_qpe.py
quri-algo/tests/algo/phase_estimation/spe/: test_gaussian.py  test_signal.py
quri-algo/tests/circuit/time_evolution/: test_trotter_circuit.py
quri-algo/tests/circuit/utils/: test_transpile.py
quri-algo/tests/core/cost_functions/: test_hilbert_schmidt_test.py
quri-algo/tests/qsub/time_evolution/: test_trotter_time_evo_qsub.py
quri-parts/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  mypy.ini  pyproject.toml
quri-parts/.licenses/pip/: antlr4-python3-runtime.dep.yml  boltons.dep.yml  cloudpickle.dep.yml  cryptography.dep.yml  dill.dep.yml  jmespath.dep.yml  matplotlib.dep.yml  numpy.dep.yml  openpulse.dep.yml  pandas.dep.yml  pycparser.dep.yml  python-dateutil.dep.yml  qiskit.dep.yml  requests_ntlm.dep.yml  sortedcontainers.dep.yml  typing_extensions.dep.yml  tzdata.dep.yml
quri-parts/docs/: .gitignore  conf.py  index.rst  reference.rst  tutorials.rst
quri-parts/docs/tutorials/: circuits.ipynb  error_mitigation.ipynb  estimator_basics.ipynb  noise_error.ipynb  parametric.ipynb  transpiler.ipynb  variational.ipynb
quri-parts/docs/tutorials/quantum_chemistry/: index.rst
quri-parts/docs/tutorials/sampling_backends/: sampling_real.ipynb  sampling_real_braket.ipynb  sampling_real_qiskit.ipynb
quri-parts/rust/: lib.rs
quri-vm/: .flake8  LICENSE  mypy.ini  pyproject.toml
quri-vm/.github/workflows/: package.yml
quri-vm/quri_vm/: __init__.py  simulator.py  vm.py
quri-vm/tests/: test_vm.py
(+281 files in other folders)
