[package]
name = "quri-parts"
version = "0.22.1"
edition = "2021"
description = "Platform-independent quantum computing library"
authors = ["QURI Parts Authors <opensource@qunasys.com>"]
repository = "https://github.com/QunaSys/quri-parts"
license = "Apache-2.0"
documentation = "https://quri-parts.qunasys.com"
homepage = "https://qunasys.com"

[features]
python = ["pyo3"]

[lib]
path = "rust/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies.pyo3]
version = "0.22.6"
features = ["extension-module"]
optional = true

[workspace]
members = ["packages/rust"]
resolver = "2"
