[tool.poetry]
name = "quri-sdk-notebooks"
version = "0.1.0"
description = ""
authors = ["QunaSys"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pillow = ">=9.5.0"
python = ">=3.10, <3.13"
qulacsvis = ">=0.7.5"
quri-parts-qsci = { git = "https://github.com/QunaSys/quri-parts-qsci.git", branch = "main"}
quri-algo = "0.2.0"
quri-vm = "^0.1"
quri-parts-algo = "0.22.1"
quri-parts-braket = "0.22.1"
quri-parts-chem = "0.22.1"
quri-parts-circuit = "0.22.1"
quri-parts-cirq = "0.22.1"
quri-parts-core = "0.22.1"
quri-parts-openfermion = "0.22.1"
quri-parts-pyscf = "0.22.1"
quri-parts-qiskit = "0.22.1"
quri-parts-qsub = "0.22.1"
quri-parts-qulacs = "0.22.1"
quri-parts-rust = "0.22.1"
quri-parts-tket = "0.22.1"
tabulate = "^0.9"
pylatexenc = "^2.10"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
